syntax = "proto3";
package auth.v1;
import "google/protobuf/empty.proto";

service AuthService {
  rpc SignUp                (SignUpRequest)                 returns (AuthResponse);
  rpc SignIn                (SignInRequest)                 returns (AuthResponse);
  rpc Refresh               (RefreshRequest)                returns (AuthResponse);
  rpc SignOut               (google.protobuf.Empty)         returns (google.protobuf.Empty);
  rpc Me                    (google.protobuf.Empty)         returns (User);
  rpc RequestPasswordReset  (RequestRestorePasswordRequest) returns (RequestResetResponse); // üëà –î–û–î–ê–ù–û
  rpc RestorePassword       (RestorePasswordRequest)        returns (AuthResponse);
  rpc ConfirmEmail          (ConfirmEmailRequest)           returns (AuthResponse);
}


message SignUpRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RequestRestorePasswordRequest {
  string email = 1;
}

message RestorePasswordRequest {
  string email = 1;
  string newPassword = 2;
  string token = 3;
}

message ConfirmEmailRequest {
  string token = 1;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
  int32  expiresIn   = 3;
  User   user        = 4;
}

message RequestResetResponse {
  string message = 1;
}

message User {
  string id    = 1;
  string email = 2;
  string username  = 3;
  string role  = 4;
}